scrollbar handled and background blur bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -135,3 +135,18 @@ html {
   margin: 0;
   padding: 0;
 }
+
+/* Chrome, Edge, Safari */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Firefox */
+.hide-scrollbar {
+  scrollbar-width: none;
+}
+
+/* IE and old Edge */
+.hide-scrollbar {
+  -ms-overflow-style: none;
+}
